--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- $Id$ -->
+<!-- $Id$ - Haw Loeung (hloeung) -->
 
 <head>
 	<meta http-equiv="content-language" content="en" />
@@ -108,6 +108,7 @@ So why choose dnsbl-milter over Sendmail's builtin <a href="http://www.sendmail.
 	<a href="http://www.karmasphere.com/devzone/concepts/protocol-dns">http://www.karmasphere.com/devzone/concepts/protocol-dns</a><br />
 	<a href="http://www.spambouncer.org/reference/blocklists.shtml">http://www.spambouncer.org/reference/blocklists.shtml</a><br />
 	<a href="http://www.nber.org/sys-admin/dnsbl-comparison.html">http://www.nber.org/sys-admin/dnsbl-comparison.html</a><br />
+	<a href="http://lclamav-milter.sourceforge.net">http://lclamav-milter.sourceforge.net</a><br />
 	<br />
 	<br />
 
@@ -118,7 +119,7 @@ So why choose dnsbl-milter over Sendmail's builtin <a href="http://www.sendmail.
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Transitional" height="31" width="88" border="0" /></a>
 		<br />
 	<h5>Proud to be another SourceForge project</h5>
-$Id$
+	<small>$Id$ - Haw Loeung (hloeung)</small>
 	</div>
 	<br />
 
